Translate: Prevent long translator names from appearing under the "Editor" label when they wrap.
Props Presskopp, aftabmuni, coffee2code.
Fixes #4509.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9497 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -1762,8 +1762,10 @@ ul.ct-legend {
 }
 
 .locale-project-contributors-group .avatar {
+	float: left;
 	vertical-align: middle;
 	margin-right: 10px;
+	margin-top: -0.5em;
 }
 
 .locale-project-contributors-group ul.compressed li {
@@ -1802,9 +1804,15 @@ ul.ct-legend {
 }
 
 .locale-project-contributors-table .contributor-name span {
+	float: left;
 	font-size: 11px;
 	display: block;
 	margin-top: 13px;
+}
+
+.locale-project-contributors-table .contributor-name a {
+	display: inline-block;
+	margin-top: 0.5em;
 }
 
 .locale-project-contributors-table tr {
